@@ -3,6 +3,8 @@ Version 1.8.6
        area in high dpi mode. (Stefan)
 - BUG: Issue #619: "show log" from merge dialog fetches
        all revisions if no revision range is specified. (Stefan)
+- BUG: Issue #621: Export Log Cache did not
+       export to the expected path. (Sup Yut Sum)
 
 Version 1.8.5
 - BUG: Issue #594: "Diff with url" generated
